--- a/main/css/lr.css
+++ b/main/css/lr.css
@@ -1,185 +1,176 @@
-    html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,em,img,q,samp,small,strong,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,caption,tbody,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{
-      margin: 0;
-      padding: 0;
-      border: 0;
-      outline: 0;
-      font-size: 100%;
-      vertical-align: baseline;
-      background: transparent;
-    }
-    * { 
-      -webkit-tap-highlight-color: rgba(0,0,0,0); 
-      -webkit-user-select: none; 
-      -webkit-touch-callout: none; 
-      -webkit-tap-highlight-color: transparent;
-    }
-    html, 
-    body {
-      width: 100%; 
-      height: 100%; 
-      background: rgba(0,0,0,.2);
-      line-height: 1;
-    }
+/* Generated from Sass */
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, em, img, q, samp, small, strong, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption, tbody, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent; }
 
-  @font-face {
+* {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent; }
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  line-height: 1; }
+
+a:link, a:active, a:hover, a:focus, a:visited {
+  color: #00173a;
+  text-decoration: none; }
+
+.ui-loader {
+  display: none; }
+
+@font-face {
   font-family: 'LandRoverOT4-Bold';
-  src: url("LandRoverOT4-Bold.eot");
-  src: url("../font/LandRoverOT4-Bold?#iefix") format("embedded-opentype"), url("../font/LandRoverOT4-Bold.woff") format("woff"), url("../font/LandRoverOT4-Bold.ttf") format("truetype"), url("../font/LandRoverOT4-Bold.svg#LandRoverOT4-Bold") format("svg");
+  src: url("landroverot4-bold.eot");
+  src: url("../font/landroverot4-bold?#iefix") format("embedded-opentype"), url("../font/landroverot4-bold.woff") format("woff"), url("../font/LandRoverOT4-Bold.ttf") format("truetype"), url("../font/landroverot4-bold.svg#landroverot4-bold") format("svg");
   font-weight: normal;
   font-style: normal; }
+#container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0; }
 
-    #container {
-      position: absolute; 
-      top: 0; 
-      left: 0; 
-      width: 100%; 
-      height: 100%; 
-      margin: 0; 
-      padding: 0;
-    }
-    #scratchArea-portrait, #scratchArea-landscape {
-      //position: absolute;
-      left: 0;
-      top: 0;
-      opacity: 0;
-    }
+#scratchArea-portrait, #scratchArea-landscape {
+  left: 0;
+  top: 0;
+  opacity: 0; }
 
-    #lrplayer {
-      display: none;
-    }
+#lrplayer {
+  display: none; }
 
-    #adContainer {
-      display: none;
-      position: relative; 
-      margin: 0 auto; 
-      padding: 0; 
-      overflow: hidden;
-    }
+#adContainer {
+  display: none;
+  position: relative;
+  margin: 0 auto;
+  padding: 0;
+  overflow: hidden; }
 
-    .lrtext {
-      font-family: "LandRoverOT4-Bold";
-      position: absolute;
-      z-index: 999999;
-    }
+.lrtext {
+  top: 50px;
+  left: 50px;
+  font-family: "LandRoverOT4-Bold";
+  color: #00173a;
+  position: absolute;
+  z-index: 999; }
 
-    #textline-1, #textline-2 {
-      text-transform: uppercase;
-    }
+#textline-1, #textline-2 {
+  text-transform: uppercase; }
 
-    #textline-4 {
-      background: url('../images/sprites.png') no-repeat;
-      background-position: -12px -75px;
-      height: 42px;
-      width: 100%;
-      padding-left: 52px;
-      margin-top: 20px;
-    }
+#textline-1 {
+  font-size: 22px; }
 
-    #textline-5 {
-      background: url('../images/sprites.png') no-repeat;
-      background-position: 0px -120px;
-      height: 40px;
-      width: 100%;
-      margin-top: 20px;
-      z-index: 1000;
-      cursor: pointer;
-    }
+.textlines {
+  margin-top: 12px; }
 
-    #lrvideobg {
-      background: white;
-      opacity: 0.75;
-      width: 100%;
-      height: 100%;
-    }
+#textline-3, #textline-4, #textline-5 {
+  font-size: 12pt;
+  display: none;
+  margin-top: 10px; }
 
-     #lrvideo {
-      position: absolute;
-    }
+#textline-4 {
+  background: url("../images/sprites.png") no-repeat;
+  background-position: -12px -75px;
+  height: 42px;
+  width: 100%;
+  padding-left: 52px;
+  margin-top: 16px; }
 
-    #lrplayer {
-      margin: auto;
-      top: 0px;
-      width: 560px;
-      height: 398px;
-      top: 220px;
-      left:208px;
-      position: absolute;
-    }
+#textline-5 {
+  background: url("../images/sprites.png") no-repeat;
+  background-position: 0px -120px;
+  height: 40px;
+  width: 100%;
+  margin-top: 16px;
+  z-index: 1000;
+  cursor: pointer; }
 
+#lrvideobg {
+  background: white;
+  opacity: 1;
+  position: relative;
+  top: 34px; }
 
+#lrvideo {
+  position: absolute; }
+
+#lrplayer {
+  margin: auto;
+  position: absolute;
+  z-index: 9999; }
+
+#lrvideoclose {
+  background: url("../images/sprites.png") no-repeat -119px 0px;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  float: right; }
 
 @media (orientation: portrait) {
+  #adContainer {
+    width: 670px;
+    height: 980px; }
 
-    #adContainer {
-      width: 670px;
-      height: 980px; 
-    }
+  #scratchArea-landscape {
+    display: none; }
 
-    #scratchArea-landscape {
-      display: none;
-    }
+  #container {
+    background-image: url("../images/portrait-clean.jpg"); }
 
-  	#container {
-  		background-image: url("../images/portrait-clean.jpg");
-  	}
+  .lrtext {
+    font-size: 18pt;
+    width: 362.47px; }
 
-    .lrtext {
-      top: 56px;
-      left: 56px;
-      font-size: 18pt;
-      width: 363px;
-    }
+  #lrplayer {
+    width: 558px;
+    height: 432px;
+    top: 186px;
+    left: 208px; }
 
-    #textline-1 {
-      font-size: 14pt;
-    }
+  #lrvideobg {
+    width: 558px;
+    height: 398px; }
 
-    #textline-3, #textline-4, #textline-5 {
-      font-size: 12pt;
-      display: none;
-      margin-top: 10px;
-    }
-
-     #lrvideo {
-      top: 42.5px;
-    }
-
-}
-
+  #lrvideo {
+    top: 76.5px; } }
 @media (orientation: landscape) {
+  #adContainer {
+    width: 980px;
+    height: 670px; }
 
-    #adContainer {
-      width: 980px;
-      height: 670px; 
-    }
+  #scratchArea-portrait {
+    display: none; }
 
-    #scratchArea-portrait {
-      display: none;
-    }
+  #container {
+    background-image: url("../images/landscape-clean.jpg"); }
 
-    #container {
-      background-image: url("../images/landscape-clean.jpg");
-    }
+  .lrtext {
+    font-size: 28px;
+    width: 493px;
+    line-height: 1.2; }
 
-    .lrtext {
-      top: 56px;
-      left: 56px;
-      font-size: 18pt;
-      width: 363px;
-    }
+  #lrplayer {
+    width: 780px;
+    height: 596px;
+    top: 16px;
+    left: 72px; }
 
-    #textline-1 {
-      font-size: 14pt;
-    }
+  #lrvideobg {
+    height: 562px;
+    width: 100%;
+    bottom: 0px; }
 
-    #textline-3, #textline-4, #textline-5 {
-      font-size: 12pt;
-      display: none;
-      margin-top: 10px;
-    }
-
-     #lrvideo {
-      top: 42.5px;
-    }
-
-}
+  #lrvideo {
+    top: 91.5px; } }
